Fixed alignment issues within the filter bar

--- a/main/src/webapp/WEB-INF/styles/toplevel.css
+++ b/main/src/webapp/WEB-INF/styles/toplevel.css
@@ -16,7 +16,7 @@
 .lp_heading_content {
     height: 100%;
 }
-.lp_heading_left_margin, .lp_filter_left_margin {
+.lp_heading_left_margin {
     width: 4%;
     height: 1px;
     float: left;
@@ -75,26 +75,31 @@ img.lp_heading_content {
 }
 
 .lp_filter_bar {
-    margin-top: 15px;
-    width: 100%;
-    clear: both;
+    margin-top: 10px;
+    margin-bottom: 10px;
+    margin-left: 4%;
+    margin-right: 4%;
+    width: 92%;
 }
 .lp_filter_search {
-    width: 25%;
-    float: left;
+    width: 29%;
 }
 .lp_filter_categories {
-    margin-left: 9%;
-    width: 18%;
-    float: left;
+    padding-left: 7%;
+    width: 24%;
 }
 .lp_filter_completed, .lp_filter_online {
-    margin-left: 2%;
+    padding-left: 2%;
     width: 18%;
-    float: left;
     font-size: smaller;
 }
-
+input[type="checkbox"].lp_filter_checkbox {
+    vertical-align: middle;
+    margin-top: 0;
+}
+.lp_filter_bar * .checkbox {
+    min-height: 0;
+}
 .lp_category_section, .lp_error_section {
     clear: both;
     width: 100%;
